@@ -1,15 +1,17 @@
 package com.github.cobrijani.tempharm;
 
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import lombok.RequiredArgsConstructor;
 
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
+@RequiredArgsConstructor
 public class OptimizedTemporalHarmonizerAlgorithm implements TemporalHarmonizerAlgorithm {
+
+    private final SortingStrategy<DatePoint> sortingStrategy;
+
     @Override
     public Iterable<DateRange> harmonize(Iterable<DateRange> dateRanges) {
         var datePoints = preparePoints(dateRanges);
@@ -24,11 +26,11 @@ public class OptimizedTemporalHarmonizerAlgorithm implements TemporalHarmonizerA
 
             if (samePoint(first, second)) {
                 if (beginAndEnd(first, second)) {
-                    result.add(new DateRange(first.date, second.date));
+                    result.add(new DateRange(first.getDate(), second.getDate()));
                 }
                 if (endBegin(first, second)) {
                     openOrCloseInterval(intervals, second);
-                    second.setFrom(!second.isFrom);
+                    second.setFrom(!second.isFrom());
                 }
                 continue;
             }
@@ -39,20 +41,20 @@ public class OptimizedTemporalHarmonizerAlgorithm implements TemporalHarmonizerA
         return result;
     }
 
-    private static List<DatePoint> preparePoints(Iterable<DateRange> dateRanges) {
-        return StreamSupport.stream(dateRanges.spliterator(), false)
-                .flatMap(dateRange -> Stream.of(new DatePoint(dateRange.getFrom(), true, dateRange.getTo()),
-                        new DatePoint(dateRange.getTo(), false, dateRange.getFrom())))
-                .sorted()
-                .toList();
+    private List<DatePoint> preparePoints(Iterable<DateRange> dateRanges) {
+        final List<DatePoint> datePoints = StreamSupport.stream(dateRanges.spliterator(), false)
+                .flatMap(dateRange -> dateRange.createDatePoints().stream())
+                .collect(Collectors.toList());
+        this.sortingStrategy.sort(datePoints);
+        return datePoints;
     }
 
     private static void appendNewRange(List<DateRange> result, DatePoint first, DatePoint second) {
-        int minusDays = second.isFrom ? 1 : 0;
-        int plusDays = !first.isFrom ? 1 : 0;
-        LocalDate from = Optional.ofNullable(first.date)
+        int minusDays = second.isFrom() ? 1 : 0;
+        int plusDays = !first.isFrom() ? 1 : 0;
+        LocalDate from = Optional.ofNullable(first.getDate())
                 .map(x -> x.plusDays(plusDays)).orElse(null);
-        LocalDate to = Optional.ofNullable(second.date).map(x ->
+        LocalDate to = Optional.ofNullable(second.getDate()).map(x ->
                 x.minusDays(minusDays)).orElse(null);
 
         var isAfter = Optional.ofNullable(from)
@@ -67,17 +69,17 @@ public class OptimizedTemporalHarmonizerAlgorithm implements TemporalHarmonizerA
     }
 
     private static boolean endBegin(DatePoint first, DatePoint second) {
-        return !first.isFrom && second.isFrom;
+        return !first.isFrom() && second.isFrom();
     }
 
     private static boolean beginAndEnd(DatePoint first, DatePoint second) {
-        return first.isFrom && !second.isFrom;
+        return first.isFrom() && !second.isFrom();
     }
 
     private static Boolean samePoint(DatePoint first, DatePoint second) {
         return Optional
-                .ofNullable(first.date)
-                .map(x -> x.equals(second.date))
+                .ofNullable(first.getDate())
+                .map(x -> x.equals(second.getDate()))
                 .orElse(false);
     }
 
@@ -87,39 +89,10 @@ public class OptimizedTemporalHarmonizerAlgorithm implements TemporalHarmonizerA
 
     private void openOrCloseInterval(Set<LocalDate> intervalRegistry, DatePoint datePoint) {
         if (datePoint.isFrom()) {
-            intervalRegistry.add(Optional.ofNullable(datePoint.pair).orElse(LocalDate.MAX));
+            intervalRegistry.add(Optional.ofNullable(datePoint.getPair()).orElse(LocalDate.MAX));
         } else {
-            intervalRegistry.remove(Optional.ofNullable(datePoint.date).orElse(LocalDate.MAX));
+            intervalRegistry.remove(Optional.ofNullable(datePoint.getDate()).orElse(LocalDate.MAX));
         }
     }
 
-    @Data
-    @AllArgsConstructor
-    private static class DatePoint implements Comparable<DatePoint> {
-
-        private final LocalDate date;
-        private boolean isFrom;
-
-        private final LocalDate pair;
-
-        @Override
-        public int compareTo(DatePoint o) {
-            if (Objects.isNull(date) && Objects.isNull(o.date)) {
-                return 0;
-            }
-            if (Objects.isNull(date)) {
-                return 1;
-            }
-            if (Objects.isNull(o.date)) {
-                return -1;
-            }
-            return date.compareTo(o.date);
-        }
-
-        @Override
-        public String toString() {
-            return "[" + (isFrom ? "E" : "A") + "] " +
-                    (date != null ? DateTimeFormatter.ISO_DATE.format(date) : "inf");
-        }
-    }
 }
